@@ -436,3 +436,6 @@ Lintian-Tags: maintainer-script-empty
 
 Fix-Script: pkg-perl-vcs.py
 Lintian-Tags: team/pkg-perl/vcs/no-team-url, team/pkg-perl/vcs/no-git
+
+Fix-Script: pkg-perl-testsuite.py
+Lintian-Tags: team/pkg-perl/testsuite/no-testsuite-header
